<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestionActivity">

    <!--Teljes scrool || full scroll -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainscrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <!--Nagyítás || Zoom -->
        <com.attibexx.old_learning_app.ui.CooperativeZoomContainer
            android:id="@+id/zoomContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="24dp">
                <!-- A kérdés és válasz input(szövege) || Question and answer input (text)  -->
                <ScrollView
                    android:id="@+id/answerQuestionInputScroll"
                    android:layout_width="0dp"
                    android:layout_height="470dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/edittextborder"
                    android:fadeScrollbars="false"
                    android:nestedScrollingEnabled="true"
                    android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
                    android:scrollbarTrackVertical="@drawable/scrollbar_track"
                    android:scrollbars="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/answerInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:background="@null"
                        android:hint="@string/answerQuestionInputHint"
                        android:inputType="textMultiLine"
                        android:padding="20dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="#A1887F"
                        android:textSize="26sp"
                        tools:ignore="VisualLintTextFieldSize" />
                </ScrollView>
                <!--Beviteli állapot kijelző || Input state indicator -->
                <TextView
                    android:id="@+id/answerQuestionInputView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/textviewborder"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/currentStatus"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/answerQuestionInputScroll" />

                <!--Gombok || Buttons -->
                <ScrollView
                    android:id="@+id/buttonScroll"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="16dp"
                    android:fadeScrollbars="false"
                    android:paddingBottom="20dp"
                    android:nestedScrollingEnabled="true"
                    android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
                    android:scrollbarTrackVertical="@drawable/scrollbar_track"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/answerQuestionInputView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <!--Következö Gomb kérdés és válasz bevitele || Next Question and Answer Input Button-->
                        <Button
                            android:id="@+id/nextButtonInputAnswerQuestion"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginBottom="4dp"
                            android:drawablePadding="2.dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/enter_next_question_answer_buttonText"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            app:backgroundTint="@color/button_pressed"
                            app:cornerRadius="0.dp"
                            app:icon="@drawable/baseline_check_24"
                            app:iconGravity="textStart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="VisualLintButtonSize" />
                        <!--Mentés fájlba Gomb || Save File Button-->
                        <Button
                            android:id="@+id/saveFileButton"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginTop="4dp"
                            android:drawablePadding="2.dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/saveFileButtonText"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            app:backgroundTint="@color/button_pressed"
                            app:cornerRadius="0.dp"
                            app:icon="@drawable/outline_cloud_upload_24"
                            app:iconGravity="textStart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/nextButtonInputAnswerQuestion"
                            tools:ignore="VisualLintButtonSize" />
                        <!--Minden adat tőrlése || All delete button-->
                        <Button
                            android:id="@+id/all_delete_button"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginTop="4dp"
                            android:drawablePadding="2.dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/allDataDelete"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            app:backgroundTint="@color/button_pressed"
                            app:cornerRadius="0.dp"
                            app:icon="@drawable/outline_delete_24"
                            app:iconGravity="textStart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/saveFileButton"
                            tools:ignore="VisualLintButtonSize" />
                        <!--Vissza a főmenü gomb || Back to main menu button-->
                        <Button
                            android:id="@+id/backToTheMainMenuButton"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginTop="4dp"
                            android:drawablePadding="2.dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/backToTheMainMenuText"
                            android:textColor="@color/white"
                            android:textSize="22sp"
                            app:backgroundTint="@color/button_pressed"
                            app:cornerRadius="0.dp"
                            app:icon="@drawable/outline_menu_24"
                            app:iconGravity="textStart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/all_delete_button"
                            tools:ignore="VisualLintButtonSize" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.attibexx.old_learning_app.ui.CooperativeZoomContainer>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>